tests/fixtures/functional_patterns/negative/n30_array_index.rs
fn get_middle(arr: [i32; 5]) -> i32 {
    arr[2]
}
